<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_market_arrival"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.surflex.jci.MarketArrivalActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView3"
        app:srcCompat="@drawable/jute_back"
        android:scaleType="fitXY"
        android:contentDescription="@string/back_img">

    </ImageView>

    <TextView
        android:text="@string/jute_variety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView1" />

    <TextView
        android:text="@string/arrived_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/minimum_ruling_market_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView3"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:text="@string/maximum_ruling_market_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView4"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:text="@string/minimum_moisture_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView5"
        android:textSize="15dp"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:text="@string/maximum_moisture_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="15dp"
        android:id="@+id/textView6"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:text="@string/grade_composition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView7"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_width="175dp"
        android:textSize="15dp"
        android:layout_alignTop="@+id/textView1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:id="@+id/arrivalQuantity"
        android:textSize="15dp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignStart="@+id/spinner1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/minimumRulingMarketRate"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:layout_above="@+id/textView4"
        android:textSize="15dp"
        android:layout_alignLeft="@+id/arrivalQuantity"
        android:layout_alignStart="@+id/arrivalQuantity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:id="@+id/maximumRulingMarketRate"
        android:layout_above="@+id/textView5"
        android:textSize="15dp"
        android:layout_alignLeft="@+id/minimumRulingMarketRate"
        android:layout_alignStart="@+id/minimumRulingMarketRate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:id="@+id/minimumMoistureContent"
        android:layout_alignTop="@+id/textView5"
        android:textSize="15dp"
        android:layout_alignLeft="@+id/maximumRulingMarketRate"
        android:layout_alignStart="@+id/maximumRulingMarketRate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:id="@+id/maximumMoistureContent"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/minimumMoistureContent"
        android:layout_alignStart="@+id/minimumMoistureContent"
        android:textSize="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:id="@+id/gradeComposition"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/maximumMoistureContent"
        android:layout_alignStart="@+id/maximumMoistureContent" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveBtn"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />


</RelativeLayout>
